--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -691,6 +691,10 @@
                                     <p class="is-size-7 heading mb-1 opacity-50">Lançamento</p>
                                     <p class="is-size-6">${game.release_date || '--'}</p>
                                 </div>
+                                <div class="mb-3">
+                                    <p class="is-size-7 heading mb-1 opacity-50">Versão</p>
+                                    <p class="is-size-6"><span class="tag is-info is-light has-text-weight-bold">v${game.display_version}</span></p>
+                                </div>
                                 <div>
                                     <p class="is-size-7 heading mb-1 opacity-50">Gênero</p>
                                     <div class="tags">
